refactor(structure): change monolith to gradle multi module project